<resources>
    <string name="app_name">الاستشارات الطبية</string>
    <string name="illnees">المرض</string>
    <string name="illnesses">الأمراض</string>
    <string name="allDoctors">جميع الأطباء</string>
    <string name="doctor_name">اسم الطبيب</string>
    <string name="type_user">نوع المستخدم</string>
    <string name="category">التخصص</string>
    <string name="chat">chat</string>
    <string name="image">image</string>
    <string name="name_illness">اسم المرض</string>
    <string name="consultation">الاستشارة</string>
    <string name="header_consultation">عنوان</string>
    <string name="AddFriendRequest"> طلبات الصداقة  </string>
    <string name="home">الصفحة الرئيسية</string>
    <string name="profile">الصفحة الشخصية</string>
    <string name="logoOut">تسجيل الخروج</string>
    <string name="notifications">اشعارات</string>
    <string name="app">dropDownMenuExample</string>
    <string name="search">البحث</string>
    <string-array name="illnesses">
        <item>القلب</item>
        <item>المعدة</item>
        <item> الكلى</item>
        <item>الرئة</item>
        <item>المعدة</item>
        <item>السرطان</item>
    </string-array>

    <style name="mySpinnerItemStyle" parent="@android:style/Widget.Holo.DropDownItem.Spinner">
        <item name="android:textColor">@color/blue</item>
    </style>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="add">إضافة استشارة</string>
    <string name="update">تحديث استشارة</string>

    <string name="addLogo">إضافة شعار</string>
    <string name="addInfographic">إضافة مخطط</string>
    <string name="userimage">userImage</string>
    <string name="logIn">تسجيل الدخول</string>
    <string name="userName">اسم المستخدم</string>
    <string name="password">كلمة المرور</string>
    <string name="email">البريد الالكتروني</string>
    <string name="phoneNumber">رقم الجوال</string>
    <string name="address">العنوان</string>
    <string name="birthDate">تاريخ الميلاد</string>
    <string name="patient">مريض</string>
    <string name="doctorName">دكتور</string>
    <string name="choose">قم بالتحديد من فضلك</string>
    <string name="chooseIllnes">قم بتحديد التخصص من فضلك</string>
    <string name="signUp">سجل الان</string>
    <string name="ifNotSignIn">اذا لم تقم بتسجيل الدخول ؟</string>
    <string name="conAddress">عنوان الاستشارة</string>
    <string name="content">تفاصيل الاستشارة</string>
    <string name="video">فيديو توضيحي</string>
    <string name="clickAddInfographic">اضغط لإضافة مخطط</string>
    <string name="LoginActive">loginActive</string>
    <string name="addconsultion">addConsultion</string>
    <string name="haveAccount">ليس لديك حساب سابقا؟</string>
    <string name="makeAccount">انشأ حساب الان</string>
    <string name="ifNotLogIn">اذا لم تقم بتسجيل الدخول؟</string>
    <string name="skip">تخطي</string>
    <string name="createAccount">إنشاء حساب</string>
    <string name="medicineCon">استشارات طبية</string>
    <string name="updateInfo">تحديث المخطط</string>
    <string name="chooseOnce">اختر احد الاقتراحات التالية</string>
    <string name="showDetailes">عرض تفاصيل الاستشارة</string>
    <string name="updateCon">تحديث الاستشارة</string>
    <string name="removeCon">حذف الاستشارة</string>
    <string name="closeDailog">اغلاق</string>
    <string name="imginfo">imgInfo</string>
    <string name="vedio">vedio</string>
    <string name="conlogo">conLogo</string>
    <string name="doctorimg">doctorImg</string>
    <string name="chatting">المحادثات</string>
    <string name="friends">الأصدقاء</string>
    <string name="findFriend">ايجاد أصدقاء</string>
    <string name="name">الاسم</string>
    <string name="friendName">اسم الصديق</string>
    <string name="sendNofi">ارسال اشعار</string>
    <string name="nottitle">عنوان الاشعار</string>
    <string name="contentNot">محتوى الاشعار</string>
    <string name="sendNot">ارسال الاشعار</string>

</resources>
