<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="50dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="365dp"
        android:layout_height="337dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/textview"
            android:layout_width="322dp"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/chooseOnce"
            android:textAlignment="center"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="351dp"
            android:layout_height="237dp"
            android:layout_below="@id/textview"
            android:layout_centerVertical="true">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/view_details"
                android:layout_width="312dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"

                android:layout_marginStart="18dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="22dp"
                android:background="@drawable/card"
                android:text="@string/showDetailes"
                android:textColor="@color/background_blue"
                android:textSize="15sp"
                tools:ignore="OnClick" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/update_consulting"
                android:layout_width="312dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"

                android:layout_marginStart="18dp"
                android:layout_marginTop="65dp"
                android:layout_marginEnd="22dp"
                android:background="@drawable/card"
                android:text="@string/updateCon"
                android:textColor="@color/background_blue"
                android:textSize="15sp"
                tools:ignore="OnClick" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/delete_consulting"
                android:layout_width="312dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="18dp"

                android:layout_marginTop="125dp"
                android:layout_marginEnd="22dp"
                android:layout_marginBottom="120dp"
                android:background="@drawable/card"
                android:text="@string/removeCon"
                android:textColor="@color/background_blue"
                android:textSize="15sp"
                tools:ignore="OnClick" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/consel"
                android:layout_width="312dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="18dp"

                android:layout_marginTop="182dp"
                android:layout_marginEnd="22dp"
                android:layout_marginBottom="120dp"
                android:background="@drawable/card"
                android:text="@string/closeDailog"
                android:textColor="@color/background_blue"
                android:textSize="15sp"
                tools:ignore="OnClick" />

        </RelativeLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>
