<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgAddLogo"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="120dp"
                    android:background="?android:selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/image_doctor"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card"
                app:cardCornerRadius="30dp"
                android:layout_margin="5dp"
                app:cardElevation="20dp"
                app:layout_constraintEnd_toStartOf="@+id/constraintLayout3"
                app:layout_constraintStart_toEndOf="@+id/constraintLayout3"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
                app:layout_constraintVertical_bias="0.0">


                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="371dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="clip_horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent">

                    <TextView
                        android:id="@+id/login"
                        android:layout_width="353dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/logIn"
                        android:textAlignment="center"
                        android:textColor="#2ca6ff"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="5dp"
                        android:autofillHints=""
                        android:background="@drawable/card"
                        android:drawableEnd="@drawable/baseline_person_24"
                        android:drawablePadding="8dp"
                        android:hint="@string/userName"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/cardview_dark_background"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="5dp"
                        android:autofillHints=""
                        android:background="@drawable/card"
                        android:drawableEnd="@drawable/baseline_lock_24"
                        android:drawablePadding="8dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/cardview_dark_background"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <EditText
                        android:id="@+id/birthday"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="5dp"
                        android:autofillHints=""
                        android:background="@drawable/card"
                        android:drawableEnd="@drawable/baseline_email_24"
                        android:drawablePadding="8dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/cardview_dark_background"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <EditText
                        android:id="@+id/mobile"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="5dp"
                        android:autofillHints=""
                        android:background="@drawable/card"
                        android:drawableEnd="@drawable/baseline_phone_24"
                        android:drawablePadding="8dp"
                        android:hint="@string/phoneNumber"
                        android:inputType="phone"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/cardview_dark_background"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <EditText
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="5dp"
                        android:autofillHints=""
                        android:background="@drawable/card"
                        android:drawableEnd="@drawable/baseline_location_on_24"
                        android:drawablePadding="8dp"
                        android:hint="@string/address"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/cardview_dark_background"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <EditText
                        android:id="@+id/a"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="5dp"
                        android:autofillHints=""
                        android:background="@drawable/card"
                        android:drawableEnd="@drawable/baseline_calendar_today_24"
                        android:drawablePadding="8dp"
                        android:hint="@string/birthDate"
                        android:inputType="datetime"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/cardview_dark_background"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <LinearLayout
                        android:id="@+id/linearradieo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@+id/a">

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/card"
                            android:drawablePadding="8dp"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radio_pirates"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:buttonTint="#2ca6ff"
                                android:checked="true"
                                android:text="@string/patient"
                                android:textColor="#2ca6ff" />

                            <RadioButton
                                android:id="@+id/radio_ninjas"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:buttonTint="#2ca6ff"
                                android:checked="true"
                                android:text="@string/doctorName"
                                android:textColor="#2ca6ff" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="90dp"
                                android:gravity="center"
                                android:text="@string/choose"
                                android:textSize="12sp" />

                        </RadioGroup>


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lineardrop"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/card"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@+id/linearradieo">

                        <Spinner
                            android:id="@+id/spinner_languages"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:layout_marginStart="10dp"
                            android:spinnerMode="dropdown"
                            android:theme="@style/mySpinnerItemStyle"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/linearradieo" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="30dp"
                            android:text="@string/chooseIllnes"
                            android:textSize="12sp" />

                    </LinearLayout>


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/log"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="18dp"
                        android:background="@drawable/card"
                        android:backgroundTint="#2ca6ff"
                        android:text="@string/logIn"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@+id/log">

                        <TextView
                            android:id="@+id/signup"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/signUp"
                            android:textAlignment="center"
                            android:textColor="#2ca6ff"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/sign"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/ifNotSignIn"
                            android:textAlignment="center"
                            android:textColor="#2ca6ff"
                            android:textSize="15sp" />


                    </LinearLayout>


                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</LinearLayout>