<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="5dp"
    android:paddingStart="10dp"
    android:paddingTop="20dp"
    android:id="@+id/homeContainer"
    tools:ignore="RtlSymmetry">

    <EditText
        android:id="@+id/search"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:autofillHints=""
        android:background="@drawable/search"
        android:hint="@string/search"
        android:inputType=""
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text=""
        android:textColor="#2ca6ff"
        android:textColorHint="#2ca6ff"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry,TouchTargetSizeCheck,TextContrastCheck" />

    <ImageView
        android:id="@+id/searchIcon"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_search"
        app:layout_constraintEnd_toEndOf="@+id/search"
        app:layout_constraintHorizontal_bias="0.934"
        android:contentDescription="@string/image"
        app:layout_constraintTop_toTopOf="@+id/search" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/illnesses"
        android:textColor="#2ca6ff"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="31dp" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvIllnesses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        tools:listitem="@layout/illness_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="94dp" />

    <TextView
        android:id="@+id/txtDoctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/allDoctors"
        android:textColor="#2ca6ff"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvIllnesses"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="31dp" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshDoctor"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDoctor"
        app:layout_constraintVertical_bias="0.902"
        tools:ignore="MissingConstraints">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvDoctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtDoctor"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="94dp"
            tools:listitem="@layout/doctor_item" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>